bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:3: error: ')' expected but 'return' found.
     return true
     ^